# mpts_parser

./: CMakeLists.txt  README.md  avc_parameters.h  bit_stream.h  main.cpp  mp2ts_parser.cpp  mp2ts_parser.sln  mp2ts_parser.vcxproj  mpts_descriptors.h  mpts_parser.cpp  mpts_parser.h  mpts_parser.sln  mpts_parser.vcxproj  util.cpp  util.h  utils.cpp  utils.h
parsers/: avc_parser.cpp  avc_parser.h  base_parser.h  mpeg2_parser.cpp  mpeg2_parser.h
